--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <header>
         <!-- Credit for the code used for the navbar: https://getbootstrap.com/docs/4.0/components/navbar/-->
         <nav class="navbar navbar-light" style="background-color: #fff;">
-        <a class="navbar-brand" href="index.html">
-                <img src="#" id="logo" width="166" height="100%" alt="Logo">
-        </a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" id="nav-link-info" href="">Beaches Info</a>
@@ -22,27 +19,37 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div class="row text-justify text-center">
-            <div class="col-lg-5 col-xs-12" id="introduction">
-                <h1>Welcome / καλώς ήρθατε to the Greek Beaches Memory Game!</h1>
-                <p>This Game will display you some of the most beautiful beaches in Greece, have fun and get inspired for your next trip!
-                If you would like more info about the beaches you are seeing, click in the right hand corner of the page on 'Beaches Info'!</p>
-                <div class="row buttons-row">
-                    <button>Start</button>
-                    <button>How to play</button>
-                    <button>Music</button>
-                </div>
-                <p id="p2">Are you experiencing some trouble with the game?</p>
-                <div class="row buttons-row">
-                    <button>Contact Me!</button>
-                </div>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="timer">30</div>
+        </div>
+            <div class="col-12 game">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
             </div>
-            <div class="col-lg-7 col-xs-12">
-                <!-- GAME HTML -->
+    </section>  
+</body>
+<!--
+<footer class="container-fluid">
+        <div class="row text-center">
+            <div class="col-12">
+                <p>Copyright</p>
             </div>
         </div>
-    </section>
-    
-</body>
+</footer>
+-->
 </html>
