changed style navbar and added nav buttons

--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
 <body>
     <header>
         <!-- Credit for the code used for the navbar: https://getbootstrap.com/docs/4.0/components/navbar/-->
-        <nav class="navbar navbar-light" style="background-color: #fff;">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" id="nav-link-info" href="">Beaches Info</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-light" style="background-color: #343d47;">
+                <ul class="navbar-nav" id="nav-buttons">
+                    <li id="mrg">
+                        <div class="button border button-2">
+                            <div class="slide"></div>
+                            <a href="#">Restart</a>
+                        </div>
+                    </li>
+                    <li class="">
+                        <div class="button border button-2">
+                            <div class="slide"></div>
+                            <a href="#">Music</a>
+                        </div>
+                    </li>
+                    <li class="">
+                        <div class="button border button-2">
+                            <div class="slide"></div>
+                            <a href="#">Beaches info</a>
+                        </div>
+                    </li>
+                </ul>
         </nav>
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="timer">30</div>
+            
         </div>
             <div class="col-12 game">
                 <div class="card"></div>
