--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <!-- Credit for the code used for the navbar: https://getbootstrap.com/docs/4.0/components/navbar/-->
-        <nav class="navbar navbar-light" style="background-color: #343d47;">
+        <nav class="navbar navbar-light center" id="navbar-inner" style="background-color: #343d47;">
                 <ul class="navbar-nav" id="nav-buttons">
-                    <li id="mrg">
+                    <li>
                         <div class="button border button-2">
                             <div class="slide"></div>
                             <a href="#">Restart</a>
