--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <script src="https://kit.fontawesome.com/c923bd6760.js" crossorigin="anonymous"></script>
     <title>Greek Beaches Memory Game</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <li class="">
                         <div class="button border button-2">
                             <div class="slide"></div>
-                            <a href="#">Music</a>
+                            <a href="#">Music <i class="fa fa-volume-mute"></i></a>
                         </div>
                     </li>
                 </ul>
@@ -60,7 +60,10 @@
 <footer class="container-fluid">
         <div class="row text-center">
             <div class="col-12">
-                <p>Copyright</p>
+                <p>© Copyright | 
+                    <a href="https://github.com/kristinabog"><i class="fab fa-github-square"></i></a>
+                    <a href="https://www.linkedin.com/in/kristina-bogdanovic-407918202/"><i class="fab fa-linkedin"></i></a>
+                </p>
             </div>
         </div>
 </footer>
