--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/c923bd6760.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="assets/img/favicon.png"/>
     <title>Greek Beaches Memory Game</title>
 </head>
 <body>
