Added front and back imgs to div .card

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/c923bd6760.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/img/favicon.png"/>
+    <link rel="icon" href="assets/img/icon.jpg"/>
     <title>Greek Beaches Memory Game</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                 </ul>
         </nav>
     </header>
-    <section class="container-fluid">
+    <section class="container-fluid game-container">
         <div class="row justify-content-center" id="count-row">
             <div class="count-button border">
                 <h2>Time: 60</h2>
@@ -38,27 +38,74 @@
                 <h2>Flips: 0</h2>
             </div>
         </div>
-            <div class="col-12 game">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+            <div class="col-12 game justify-content-center">
+                <div class="card">
+                    <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                     <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                     <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
+                <div class="card">
+                    <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
+                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                </div>
             </div>
-    </section>  
-</body>
-<footer class="container-fluid">
+    </section> 
+    <footer class="container-fluid">
         <div class="row text-center">
             <div class="col-12">
                 <p>© Copyright | 
@@ -67,5 +114,6 @@
                 </p>
             </div>
         </div>
-</footer>
+    </footer> 
+</body>
 </html>
