added a data property to every card

--- a/index.html
+++ b/index.html
@@ -39,67 +39,67 @@
             </div>
         </div>
             <div class="col-12 game justify-content-center">
-                <div class="card">
+                <div class="card" data-number="1">
                     <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="1">
                     <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="2">
                     <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="2">
                     <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="3">
                     <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="3">
                      <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="4">
                      <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="4">
                     <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="5">
                     <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="5">
                     <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="6">
                     <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="6">
                     <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="7">
                     <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="7">
                     <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="8">
                     <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card">
+                <div class="card" data-number="8">
                     <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
