added functions resetBoard and shuffle

--- a/index.html
+++ b/index.html
@@ -39,67 +39,67 @@
             </div>
         </div>
             <div class="col-12 game justify-content-center">
-                <div class="card" data-number="1">
+                <div class="card" data-framework="apelles">
                     <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="1">
+                <div class="card" data-framework="apelles">
                     <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="2">
+                <div class="card" data-framework="gidaki">
                     <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="2">
+                <div class="card" data-framework="gidaki">
                     <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="3">
+                <div class="card" data-framework="kolona">
                     <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="3">
+                <div class="card" data-framework="kolona">
                      <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="4">
+                <div class="card" data-framework="stravnam">
                      <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="4">
+                <div class="card" data-framework="stravnam">
                     <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="5">
+                <div class="card" data-framework="myrtos">
                     <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="5">
+                <div class="card" data-framework="myrtos">
                     <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="6">
+                <div class="card" data-framework="navagio">
                     <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="6">
+                <div class="card" data-framework="navagio">
                     <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="7">
+                <div class="card" data-framework="katsiki">
                     <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="7">
+                <div class="card" data-framework="katsiki">
                     <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="8">
+                <div class="card" data-framework="voutoumi">
                     <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
-                <div class="card" data-number="8">
+                <div class="card" data-framework="voutoumi">
                     <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
                     <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
                 </div>
@@ -115,5 +115,6 @@
             </div>
         </div>
     </footer> 
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
