changed img with .back into div, removed src from img .front

--- a/index.html
+++ b/index.html
@@ -40,68 +40,68 @@
         </div>
             <div class="col-12 game justify-content-center">
                 <div class="card" data-framework="apelles">
-                    <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" " />
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="apelles">
-                    <img class="front" src="cards/apelles.jpg" alt="Apelles Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="gidaki">
-                    <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="gidaki">
-                    <img class="front" src="cards/gidaki.jpg" alt="Gidaki Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="kolona">
-                    <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="kolona">
-                     <img class="front" src="cards/kolona.jpg" alt="Kolona Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                     <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="stravnam">
-                     <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="stravnam">
-                    <img class="front" src="cards/stravnam.png" alt="Stravnam Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="myrtos">
-                    <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="myrtos">
-                    <img class="front" src="cards/myrtos.jpg" alt="Myrtos Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="navagio">
-                    <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="navagio">
-                    <img class="front" src="cards/navagio.jpg" alt="Navagio Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="katsiki">
-                    <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="katsiki">
-                    <img class="front" src="cards/porto-katsiki.jpg" alt="Porto Katsiki" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="voutoumi">
-                    <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
                 <div class="card" data-framework="voutoumi">
-                    <img class="front" src="cards/voutoumi.jpg" alt="Voutoumi Beach" />
-                    <img class="back" src="assets/img/cards-bg.jpg" alt="Greek style background" />
+                    <img class="front" src=" "/>
+                    <div class="back"></div>
                 </div>
             </div>
     </section> 
