removed data-frameworks

--- a/index.html
+++ b/index.html
@@ -39,67 +39,67 @@
             </div>
         </div>
             <div class="col-12 game justify-content-center">
-                <div class="card" data-framework="apelles">
+                <div class="card">
                     <img class="front" src=" " />
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="apelles">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="gidaki">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="gidaki">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="kolona">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="kolona">
+                <div class="card">
                      <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="stravnam">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="stravnam">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="myrtos">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="myrtos">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="navagio">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="navagio">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="katsiki">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="katsiki">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="voutoumi">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
-                <div class="card" data-framework="voutoumi">
+                <div class="card">
                     <img class="front" src=" "/>
                     <div class="back"></div>
                 </div>
