--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="container-fluid game-container">
         <div class="row justify-content-center" id="count-row">
             <div class="count-button border">
-                <h2>Time: 60</h2>
+                <h2>Time: <span id="timer">60</span></h2>
             </div>
             <div class="count-button border">
-                <h2>Flips: 0</h2>
+                <h2>Flips: <span id="counter">0</span></h2>
             </div>
         </div>
             <div class="col-12 game justify-content-center">
