added id of restart-button in restart button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav class="navbar navbar-light justify-content-center" style="background-color: #343d47;">
                 <ul class="navbar-nav" id="nav-buttons">
                     <li>
-                        <div class="button border button-2">
+                        <div class="button border button-2" id="restart-button">
                             <div class="slide"></div>
-                            <a href="#">Restart</a>
+                            <a>Restart</a>
                         </div>
                     </li>
                     <li class="">
