code clean up, and attempt to make the restart function work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li>
                         <div class="button border button-2" id="restart-button">
                             <div class="slide"></div>
-                            <a>Restart</a>
+                            <a href="#">Restart</a>
                         </div>
                     </li>
                     <li class="">
