--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </li>
                     <li class="">
-                        <div class="button border button-2">
+                        <div class="button border button-2" id="music-btn" onclick="startBgMusic()">
                             <div class="slide"></div>
                             <a href="#">Music <i class="fa fa-volume-mute"></i></a>
                         </div>
@@ -32,30 +32,29 @@
     </header>
     <!-- Navbar -->
     <!-- Win Modal -->
-    <div class="modal justify-content-center" id="win-modal" tabindex="-1" role="dialog">
+    <div class="modal" id="win-modal" data-show="true" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content justify-content-center">
             <div class="modal-header">
-                <h5 class="modal-title"></h5>
+                <h5 class="modal-title">Well Done!</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <h6>Well Done!</h6>
                 <p></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Start Again</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
             </div>
             </div>
         </div>
     </div>
     <!-- Win Modal -->
     <!-- Game Over Modal -->
-    <div class="modal justify-content-center" id="game-over-modal" data-show="true" tabindex="-1" role="dialog">
+    <div class="modal" id="game-over-modal" data-show="true" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content justify-content-center">
             <div class="modal-header">
                 <h5 class="modal-title">Time's Up!</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -66,7 +65,7 @@
                 <p>Unfortunately you ran out of time. Try again!.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Start Again</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
             </div>
             </div>
         </div>
