--- a/index.html
+++ b/index.html
@@ -32,41 +32,45 @@
     </header>
     <!-- Navbar -->
     <!-- Win Modal -->
-    <div class="modal" id="win-modal" data-show="true" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content justify-content-center">
-            <div class="modal-header">
-                <h5 class="modal-title">Well Done!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
-            </div>
+    <div class="modal fade" id="win-modal" data-show="true" tabindex="-1" role="dialog">
+        <div class="vertical-alignment-helper">
+            <div class="modal-dialog vertical-align-center" role="document">
+                <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h5 class="modal-title">Well Done!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body text-center">
+                    <p></p>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
+                </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- Win Modal -->
     <!-- Game Over Modal -->
-    <div class="modal" id="game-over-modal" data-show="true" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content justify-content-center">
-            <div class="modal-header">
-                <h5 class="modal-title">Time's Up!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Unfortunately you ran out of time. Try again!.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
-            </div>
+    <div class="modal fade" id="game-over-modal" data-show="true" tabindex="-1" role="dialog">
+        <div class="vertical-alignment-helper">
+            <div class="modal-dialog vertical-align-center" role="document">
+                <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h5 class="modal-title">Time's Up!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body text-center">
+                    <p>Unfortunately you ran out of time. Try again!</p>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
+                </div>
+                </div>
             </div>
         </div>
     </div>
