center modal titles

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="vertical-alignment-helper">
             <div class="modal-dialog vertical-align-center" role="document">
                 <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h5 class="modal-title">Well Done!</h5>
+                <div class="modal-header text-center">
+                    <h5 class="modal-title w-100">Well Done!</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
@@ -58,8 +58,8 @@
         <div class="vertical-alignment-helper">
             <div class="modal-dialog vertical-align-center" role="document">
                 <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h5 class="modal-title">Time's Up!</h5>
+                <div class="modal-header text-center">
+                    <h5 class="modal-title w-100">Time's Up!</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
