--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="">
                         <div class="button border button-2" id="music-btn">
                             <div class="slide"></div>
-                            <a href="#">Music <i id="music-icon" class="fas fa-volume-mute"></i></a>
+                            <a href="#">Music <i id="music-icon" class="fas fa-play"></i></a>
                         </div>
                     </li>
                 </ul>
@@ -38,9 +38,6 @@
                 <div class="modal-content">
                 <div class="modal-header text-center">
                     <h5 class="modal-title w-100">Well Done!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
                 </div>
                 <div class="modal-body text-center">
                     <p id="win-text"></p>
@@ -60,9 +57,6 @@
                 <div class="modal-content">
                 <div class="modal-header text-center">
                     <h5 class="modal-title w-100">Time's Up!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
                 </div>
                 <div class="modal-body text-center">
                     <p>Unfortunately you ran out of time. Try again!</p>
